<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/btn_settings"
        android:textSize="@dimen/settingsTextSize"
        app:layout_constraintBottom_toTopOf="@+id/operationField"
        app:layout_constraintEnd_toEndOf="@+id/imageView" />


    <TextView
        android:id="@+id/operationField"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        android:background="@color/backgroundColor"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@+id/but_split"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numberField" />

    <TextView
        android:id="@+id/numberField"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        android:background="@color/backgroundColor"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@+id/but2"
        app:layout_constraintEnd_toEndOf="@+id/but3"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but1"
        style="@style/buttonStyle"
        android:text="@string/but1"
        app:layout_constraintBottom_toTopOf="@+id/but4"
        app:layout_constraintEnd_toStartOf="@+id/but2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but2"
        style="@style/buttonStyle"
        android:text="@string/but2"
        app:layout_constraintBottom_toTopOf="@+id/but5"
        app:layout_constraintEnd_toStartOf="@+id/but3"
        app:layout_constraintStart_toEndOf="@id/but1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but3"
        style="@style/buttonStyle"
        android:text="@string/but3"
        app:layout_constraintBottom_toTopOf="@+id/but6"
        app:layout_constraintEnd_toStartOf="@+id/but_split"
        app:layout_constraintStart_toEndOf="@id/but2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but4"
        style="@style/buttonStyle"
        android:text="@string/but4"
        app:layout_constraintBottom_toTopOf="@+id/but7"
        app:layout_constraintEnd_toStartOf="@+id/but5"
        app:layout_constraintStart_toStartOf="@id/but1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but5"
        style="@style/buttonStyle"
        android:text="@string/but5"
        app:layout_constraintBottom_toTopOf="@+id/but8"
        app:layout_constraintEnd_toStartOf="@+id/but6"
        app:layout_constraintStart_toEndOf="@id/but4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but6"
        style="@style/buttonStyle"
        android:text="@string/but6"
        app:layout_constraintBottom_toTopOf="@+id/but9"
        app:layout_constraintEnd_toStartOf="@+id/but_multiplication"
        app:layout_constraintStart_toEndOf="@id/but5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but7"
        style="@style/buttonStyle"
        android:text="@string/but7"
        app:layout_constraintBottom_toTopOf="@+id/but0"
        app:layout_constraintEnd_toStartOf="@+id/but8"
        app:layout_constraintStart_toStartOf="@id/but4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but8"
        style="@style/buttonStyle"
        android:text="@string/but8"
        app:layout_constraintBottom_toTopOf="@+id/but0"
        app:layout_constraintEnd_toStartOf="@id/but9"
        app:layout_constraintStart_toEndOf="@id/but7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but9"
        style="@style/buttonStyle"
        android:text="@string/but9"
        app:layout_constraintBottom_toTopOf="@+id/but_dot"
        app:layout_constraintEnd_toStartOf="@+id/but_minus"
        app:layout_constraintStart_toEndOf="@id/but8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/but0"
        app:layout_constraintBottom_toTopOf="@id/but_equally"
        app:layout_constraintEnd_toEndOf="@id/but8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/but7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/dot"
        app:layout_constraintBottom_toTopOf="@id/but_equally"
        app:layout_constraintEnd_toStartOf="@+id/but_plus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/but0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_split"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/but_split"
        app:layout_constraintBottom_toTopOf="@+id/but_multiplication"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/but3"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/but_multiplication"
        app:layout_constraintBottom_toTopOf="@+id/but_minus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/but6"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/but_minus"
        app:layout_constraintBottom_toTopOf="@+id/but_plus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/but9"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/but_plus"
        app:layout_constraintBottom_toTopOf="@+id/but_equally"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/but_dot" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_equally"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="press"
        android:text="@string/but_equally"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/but_plus"
        app:layout_constraintStart_toStartOf="@id/but0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_c"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="clear"
        android:text="@string/but_c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/but_minus"
        app:layout_constraintTop_toTopOf="@+id/but_split" />


</androidx.constraintlayout.widget.ConstraintLayout>



